# python-chatbot-starter-feat-major_refactor

./: .gitignore  Dockerfile  Makefile  README.md  license.md  manual_ingestion.py  pyproject.toml
backend/: main.py
backend/routers/: chat.py  delete.py  ingest.py
backend/utils/: chat.py  delete.py  ingest.py  prompts.py
docs/: dummy_csv.csv  dummy_txt.txt
frontend/: .env.example  .gitignore  README.md  components.json  license.md  next.config.js  package.json
frontend/components/: FileUploadArea.tsx  WebsiteUrlUpload.tsx  action-panel.tsx  button-scroll-to-bottom.tsx  chat-message-actions.tsx  chat-message.tsx  chat-panel.tsx  chat-scroll-anchor.tsx  chat.tsx  empty-screen.tsx  header.tsx  layout.tsx  prompt-form.tsx  upload-files-modal.tsx
frontend/components/ui/: accordion.tsx  alert-dialog.tsx  dialog.tsx  icons.tsx  toast.tsx  tooltip.tsx
frontend/config/: prompts.ts  variables.ts
frontend/hooks/: use-toast.ts
frontend/pages/: _app.tsx  index.tsx
frontend/scripts/: ingest-data.ts
frontend/utils/: constants.ts  helpers.ts  langchain-stream.ts  makechain.ts  parse-message.ts  pinecone-client.ts  supabase-client.ts
